// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Snapshot tests it matches the snapshot with centered = true 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  display: block;
  z-index: +1;
  width: 100%;
  height: 100%;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  font-size: 24px;
  width: 24px;
  text-align: center;
  padding: 8px;
  border-radius: 50%;
  color: #000000;
}

.c3:hover {
  background: #F3F3F3;
}

.c1 {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.75rem auto;
  pointer-events: none;
  border-radius: 6px;
  -webkit-animation: eKCkCK ease 0.25s;
  animation: eKCkCK ease 0.25s;
  width: auto;
  min-width: 360px;
  min-height: calc(100% - 3.5rem);
  max-width: 600px;
}

.c4 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255,255,255,0.8);
  z-index: -1;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 1px 4px rgba(0,0,0,0.15),0 4px 10px rgba(0,0,0,0.15);
  width: 100%;
  padding: 16px 24px;
  pointer-events: auto;
  background-color: #fff;
  background-clip: padding-box;
  border: 0 solid rgba(0,0,0,0.2);
  border-radius: 0.3rem;
  outline: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
          />
        </svg>
      </div>
      test
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`Modal Snapshot tests it matches the snapshot with default. props 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  display: block;
  z-index: +1;
  width: 100%;
  height: 100%;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  font-size: 24px;
  width: 24px;
  text-align: center;
  padding: 8px;
  border-radius: 50%;
  color: #000000;
}

.c3:hover {
  background: #F3F3F3;
}

.c1 {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.75rem auto;
  pointer-events: none;
  border-radius: 6px;
  -webkit-animation: eKCkCK ease 0.25s;
  animation: eKCkCK ease 0.25s;
  width: auto;
  min-width: 360px;
  max-width: 600px;
}

.c4 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255,255,255,0.8);
  z-index: -1;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 1px 4px rgba(0,0,0,0.15),0 4px 10px rgba(0,0,0,0.15);
  width: 100%;
  padding: 16px 24px;
  pointer-events: auto;
  background-color: #fff;
  background-clip: padding-box;
  border: 0 solid rgba(0,0,0,0.2);
  border-radius: 0.3rem;
  outline: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
          />
        </svg>
      </div>
      test
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`Modal Snapshot tests it matches the snapshot with size = large 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  display: block;
  z-index: +1;
  width: 100%;
  height: 100%;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  font-size: 24px;
  width: 24px;
  text-align: center;
  padding: 8px;
  border-radius: 50%;
  color: #000000;
}

.c3:hover {
  background: #F3F3F3;
}

.c1 {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.75rem auto;
  pointer-events: none;
  border-radius: 6px;
  -webkit-animation: eKCkCK ease 0.25s;
  animation: eKCkCK ease 0.25s;
  width: auto;
  min-width: 360px;
  max-width: 900px;
}

.c4 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255,255,255,0.8);
  z-index: -1;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 1px 4px rgba(0,0,0,0.15),0 4px 10px rgba(0,0,0,0.15);
  width: 100%;
  padding: 16px 24px;
  pointer-events: auto;
  background-color: #fff;
  background-clip: padding-box;
  border: 0 solid rgba(0,0,0,0.2);
  border-radius: 0.3rem;
  outline: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
          />
        </svg>
      </div>
      test
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`Modal Snapshot tests it matches the snapshot with size = medium 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  display: block;
  z-index: +1;
  width: 100%;
  height: 100%;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  font-size: 24px;
  width: 24px;
  text-align: center;
  padding: 8px;
  border-radius: 50%;
  color: #000000;
}

.c3:hover {
  background: #F3F3F3;
}

.c1 {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.75rem auto;
  pointer-events: none;
  border-radius: 6px;
  -webkit-animation: eKCkCK ease 0.25s;
  animation: eKCkCK ease 0.25s;
  width: auto;
  min-width: 360px;
  max-width: 600px;
}

.c4 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255,255,255,0.8);
  z-index: -1;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 1px 4px rgba(0,0,0,0.15),0 4px 10px rgba(0,0,0,0.15);
  width: 100%;
  padding: 16px 24px;
  pointer-events: auto;
  background-color: #fff;
  background-clip: padding-box;
  border: 0 solid rgba(0,0,0,0.2);
  border-radius: 0.3rem;
  outline: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
          />
        </svg>
      </div>
      test
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;

exports[`Modal Snapshot tests it matches the snapshot with size = small 1`] = `
.c0 {
  position: fixed;
  top: 0;
  left: 0;
  display: block;
  z-index: +1;
  width: 100%;
  height: 100%;
}

.c3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  right: 0;
  font-size: 24px;
  width: 24px;
  text-align: center;
  padding: 8px;
  border-radius: 50%;
  color: #000000;
}

.c3:hover {
  background: #F3F3F3;
}

.c1 {
  -webkit-transform: none;
  -ms-transform: none;
  transform: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 1.75rem auto;
  pointer-events: none;
  border-radius: 6px;
  -webkit-animation: eKCkCK ease 0.25s;
  animation: eKCkCK ease 0.25s;
  width: auto;
  min-width: 360px;
  max-width: 400px;
}

.c4 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: rgba(255,255,255,0.8);
  z-index: -1;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: 0 1px 4px rgba(0,0,0,0.15),0 4px 10px rgba(0,0,0,0.15);
  width: 100%;
  padding: 16px 24px;
  pointer-events: auto;
  background-color: #fff;
  background-clip: padding-box;
  border: 0 solid rgba(0,0,0,0.2);
  border-radius: 0.3rem;
  outline: 0;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-times fa-w-11 "
          data-icon="times"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 352 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
            fill="currentColor"
          />
        </svg>
      </div>
      test
    </div>
  </div>
  <div
    class="c4"
  />
</div>
`;
